--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -1837,7 +1837,7 @@ allow_anonymous true
  :term        eshell vterm
  :tools       editorconfig (eval +overlay) (lookup +docsets) magit pdf (pass +auth) make tree-sitter lsp direnv llm
  :checkers    syntax
- :lang        (clojure +tree-sitter) data emacs-lisp (javascript +tree-sitter +lsp)
+ :lang        (clojure +tree-sitter) data emacs-lisp (javascript +tree-sitter +lsp) markdown
               (org +contacts +dragndrop +pandoc +present +hugo +roam2 +pretty) beancount (go +lsp +tree-sitter)
               rest (sh +tree-sitter) plantuml (python +lsp +tree-sitter) (web +tree-sitter) yaml (json +tree-sitter)
  :app         calendar telega (rss +org) torrent irc exwm emms dash-menu
@@ -2395,6 +2395,7 @@ mod? dotfiles '~/devel/dotfiles/guix/Justfile'
   :config
   (setq! fj-host "https://codeberg.org"
          fj-user "sarg"
+         fj-token-use-auth-source nil
          fj-token (auth-source-pass-get 'secret "Api/codeberg.org/fj.el")))
 
 (use-package! guix
