--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -702,6 +702,10 @@ EXWM has a separate [[../.doom.d/modules/app/exwm][doom app]]. Here are just the
 
 (display-battery-mode 1)
 (display-time-mode 1)
+(setq! global-mode-string
+      '(emms-mode-line-string
+        battery-mode-line-string
+        display-time-string))
 #+end_src
 *** workspaces
 #+begin_src elisp :noweb-ref exwm :tangle no
@@ -1008,6 +1012,12 @@ REVERSE? it when true. Returns the selected buffer."
                (list "" #'emms-pause))
               (t (list "" #'ignore))))))
 
+  (defun emms/modeline-function ()
+    (concat (emms/modeline-status-icon)
+            (emms-mode-line-playlist-current)))
+
+  (setq! emms-mode-line-mode-line-function #'emms/modeline-function)
+
   (set-popup-rule!
     (lambda (buffer action)
       (buffer-local-value 'emms-playlist-buffer-p (get-buffer buffer)))
@@ -1016,13 +1026,11 @@ REVERSE? it when true. Returns the selected buffer."
     :select t
     :modeline '(" "
                 (:eval (when emms-random-playlist " "))
-                (:eval (emms/modeline-status-icon))
                 emms-mode-line-string
                 emms-playing-time-string)
     :height 15)
 
-  (add-hook!
-    (emms-player-paused emms-player-started emms-player-stopped) #'force-mode-line-update)
+  (add-hook 'emms-player-paused-hook #'emms-mode-line-alter)
 
   ;; don't show mode-line globally, to be shown only in the popup buffer
   (emms-mode-line-mode 1)
